objects/AcctSeed__Payment_Processor__c/AcctSeed__Payment_Processor__c.object-meta.xml
<CustomObject>
    <label>Payment Processor</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Processors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>