objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__ACH_Convenience_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__ACH_Convenience_Fee_Type__c</fullName>
    <inlineHelpText>Relates to payments made within Salesforce. Select a flat fee or percentage for adding convenience fees to ACH payments.</inlineHelpText>
    <label>ACH Convenience Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACH Flat Fee</fullName>
            </value>
            <value>
                <fullName>ACH Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>