objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__ACH_Flat_Fee__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__ACH_Flat_Fee__c</fullName>
    <inlineHelpText>Enter the convenience flat fee amount for ACH payments.</inlineHelpText>
    <label>ACH Flat Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>