objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__ACH_Percent__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__ACH_Percent__c</fullName>
    <inlineHelpText>Enter the convenience fee percentage for ACH payments.</inlineHelpText>
    <label>ACH Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>