objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__Active__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the selected payment processor is active/inactive.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>