objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__AP_Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AP_Payment_Processor__c</fullName>
    <formula>IF(ISPICKVAL( AcctSeed__Type__c , &apos;Edenred&apos;), true, false)</formula>
    <inlineHelpText>Enable this field if the payment processor is Accounts Payable.</inlineHelpText>
    <label>AP Payment Processor</label>
    <type>Checkbox</type>
</CustomField>