objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__CC_Percent__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__CC_Percent__c</fullName>
    <inlineHelpText>Enter the convenience fee percentage for credit card payments.</inlineHelpText>
    <label>CC Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>