objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__Connected_Account_Token__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Connected_Account_Token__c</fullName>
    <label>Connected Account Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>