objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__Convenience_Fee_Mapping__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Convenience_Fee_Mapping__c</fullName>
    <inlineHelpText>The custom field you selected in Cardknox to save the Electronic Transfer Fee amount.</inlineHelpText>
    <label>Convenience Fee Mapping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AcctSeed__Custom_Fields</valueSetName>
    </valueSet>
</CustomField>