objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__Convenience_Fees_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Convenience_Fees_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The GL Account that is set as the Adjustment GL Account on the billing cash receipt for convenience fees or electronic transfer fees.  This is recorded as a negative adjustment on the billing cash receipt.</inlineHelpText>
    <label>Convenience Fees GL Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Revenue, Expense</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>Payment Processors (Convenience Fees GL Account)</relationshipLabel>
    <relationshipName>Payment_Processors</relationshipName>
    <type>Lookup</type>
</CustomField>