objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__Credit_Card_Convenience_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Credit_Card_Convenience_Fee_Type__c</fullName>
    <inlineHelpText>Relates to payments made within Salesforce. Select a flat fee or percentage for adding convenience fees to credit card payments.</inlineHelpText>
    <label>Credit Card Convenience Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CC Flat Fee</fullName>
            </value>
            <value>
                <fullName>CC Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>