objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__Enable_Convenience_Fees__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Enable_Convenience_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To enable the calculation and processing of convenience fees, check this checkbox once you have enabled convenience or &apos;Electronic transfer&apos; fees in Cardknox.</inlineHelpText>
    <label>Enable Convenience Fees</label>
    <type>Checkbox</type>
</CustomField>