objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__Enable_PaymentSITE_Partial_Payment__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Enable_PaymentSITE_Partial_Payment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable PaymentSITE Partial Payment</label>
    <type>Checkbox</type>
</CustomField>