objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__External_Key__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__External_Key__c</fullName>
    <description>It would uniquely identify the payment processor record across organizations and be used to access any associated API key data stored in the Keys__c custom setting.</description>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>