objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__Global_Default_Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Global_Default_Payment_Processor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Default Payment Processor</label>
    <type>Checkbox</type>
</CustomField>