objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Last_Sync__c</fullName>
    <inlineHelpText>The last time and date that the “Create Payment Processing Journal Entries” batch job successfully ran.</inlineHelpText>
    <label>Last Sync</label>
    <type>DateTime</type>
</CustomField>