objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__Merchant_Fees_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Merchant_Fees_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Cardknox only: Must be set to an Expense GL Account.</inlineHelpText>
    <label>Merchant Fees GL Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Expense</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>Payment Processors (Merchant Fees GL Account)</relationshipLabel>
    <relationshipName>Fee_Processors</relationshipName>
    <type>Lookup</type>
</CustomField>