objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__Merchant_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Merchant_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Cardknox only: Must be set to a GL Account with &apos;Bank/Credit Card Account&apos; enabled and cannot be the same as the Bank GL Account.</inlineHelpText>
    <label>Merchant GL Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__GL_Account__c.AcctSeed__Bank__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>Payment Processors</relationshipLabel>
    <relationshipName>Merchant_Processors</relationshipName>
    <type>Lookup</type>
</CustomField>