objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__Original_Amount_Mapping__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Original_Amount_Mapping__c</fullName>
    <inlineHelpText>The custom field you selected in Cardknox to save the original amount.</inlineHelpText>
    <label>Original Amount Mapping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AcctSeed__Custom_Fields</valueSetName>
    </valueSet>
</CustomField>