objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__PaymentSite_URL__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__PaymentSite_URL__c</fullName>
    <label>PaymentSite URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>