objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__Test_Mode__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Test_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Mode</label>
    <type>Checkbox</type>
</CustomField>