objects/AcctSeed__Payment_Processor__c/fields/AcctSeed__Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Type__c</fullName>
    <inlineHelpText>Select payment processor.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardknox</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>