objects/AcctSeed__Payment_Processor__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Test_Mode__c</columns>
    <columns>AcctSeed__Connected_Account_Token__c</columns>
    <columns>AcctSeed__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>