objects/AcctSeed__Payment_Processor__c/listViews/AcctSeed__Stripe.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Stripe</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Test_Mode__c</columns>
    <columns>AcctSeed__Connected_Account_Token__c</columns>
    <columns>AcctSeed__Active__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>AcctSeed__Type__c</field>
        <operation>equals</operation>
        <value>Stripe</value>
    </filters>
    <label>Stripe</label>
</ListView>